[BZ1165602] When a security manager is set via the java.security.manager system property, enable the security manager in JBoss Modules with -secmgr. Also print a warning message indicating the property is deprecated.